fixed some inconsistencies and changed how links look when interacted with

--- a/photos.html
+++ b/photos.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <h1 class="title">Photo Gallery</h1>
-        <p class="center" style="text-align: center;">Click on images to view them in a new tab</p>
+        <h3 style="text-align: center;">Click on images to view them in a new tab</h3>
     <!--Navbar below. do not remove this.-->
     <div class="nav">
       <a href="index.html" class="navbtn">Home</a>
