--- a/history.html
+++ b/history.html
@@ -46,7 +46,7 @@
                 <td>April 2023: <a href="https://i.ibb.co/tXyR5QL/Church.png" target="_blank" class="link">A church is made to appease the god</a></td>
             </tr>
             <tr>
-                <td>May 2023: God grows increasingly angry</td>
+                <td>May 2023: Despite this, god is still pissed off</td>
             </tr>
             </tbody>
         </table>
